--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -20,7 +20,7 @@
           type="submit"
           (click)="onRegister(email, password)"
           expand="block"
-          >Register</ion-button
+          >Registrar</ion-button
         >
       </ion-col>
     </ion-row>
