--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -36,7 +36,7 @@
     <ion-row>
       <ion-col>
         <ion-button type="submit" color="danger" expand="block" (click)="onLoginGoogle(email, password)">
-          Login With Google
+          Iniciar con Google
         </ion-button>
       </ion-col>
     </ion-row>
