--- a/src/app/verificar-email/verificar-email.page.html
+++ b/src/app/verificar-email/verificar-email.page.html
@@ -8,7 +8,11 @@
 </ion-header>
 
 <ion-content>
-
-  <p>Lo sentimos, su cuenta aún no ha sido registrada y activada.</p>
-
+  <p *ngIf="!this.mostrarMensajeExito">Lo sentimos, su cuenta aún no ha sido registrada y activada.</p>
+  <div *ngIf="this.mostrarMensajeExito">
+    <p>Su cuenta ha sido registrada.</p>
+    <p class="ion-text-end">
+      <a routerLink="/login">Inicia sesión aquí</a>
+    </p>
+  </div>
 </ion-content>
